--- a/css/artigo.css
+++ b/css/artigo.css
@@ -12,6 +12,7 @@ body{
 
 p{
     font-size: 14pt;
+    text-align: justify;
 }
 
 a{
@@ -38,7 +39,7 @@ figure{
 }
 
 figure img{
-    max-width: 70vw;
+    width: 70vw;
     border-radius: 5px;
 }
 
@@ -61,11 +62,12 @@ figure.fig_centro img{
 
 
 h3{
+    text-transform: uppercase;
     font-family: "fauna";
     font-size: 40pt;
     text-decoration:underline;
     text-align: center;
-    color: #671ae0;
+    color: #003bff;
     text-shadow: rgba(255, 255, 255, 0.233) 0px 3px 30px;
 }
 
@@ -81,6 +83,10 @@ h5 {
     font-weight: 600;
     font-size: 10pt;
     margin-bottom: -5px;
+}
+
+b{
+    text-decoration: underline;
 }
 
 li {
@@ -156,7 +162,7 @@ p.tempo{
     }
 
     figure img{
-        max-width: 80vw;
+        width: 80vw;
     }
 
     header{
